--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
+      <h1 class="index-page-h1">Интернет-магазин строительных материалов и инструментов для ремонта</h1>
       <div class="top-section">
         <a href="index.html"><img style="background-color: red;" class="menu-logo-bottom" src="img/logo.svg" alt="Логотип магазина Technomart" width="220" height="47"></a>
         <form action="catalog.html" method="get">
