--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <main>
 
       <section class="offers">
-        <h2>Предложения</h2>
+        <h2 class="visually-hidden">Предложения</h2>
         <div class="materials"><p>Материалы <br></p><p class="feature">На любой вкус</p></div>
         <div class="tool"><p>Инструмент <br></p><p class="feature">На все случаи</p></div>
         <div class="technics"><p>Техника <br></p><p class="feature">Для стройки</p></div>
