--- a/index.html
+++ b/index.html
@@ -98,14 +98,14 @@
         <h2>Популярные производители</h2>
         <a href="#">Все производители</a>
         <ul>
-          <li><a href="#">Bosch</a></li>
-          <li><a href="#">BMakita</a></li>
-          <li><a href="#">BDewalt</a></li>
-          <li><a href="#">BИнтерскол</a></li>
-          <li><a href="#">BHitachi</a></li>
-          <li><a href="#">BLG</a></li>
-          <li><a href="#">BAEG Power Solutions</a></li>
-          <li><a href="#">BMetabowerke</a></li>
+          <li><a href="#"><img src="img/bosch.png" width="126" height="37" alt="Bosch"></a></li>
+          <li><a href="#"><img src="img/makita.png" width="123" height="40" alt="Makita"></a></li>
+          <li><a href="#"><img src="img/de-walt.png" width="146" height="44" alt="Dewalt"></a></li>
+          <li><a href="#"><img src="img/interskol.png" width="200" height="88" alt="Интерскол"></a></li>
+          <li><a href="#"><img src="img/hitachi.png" width="169" height="31" alt="Hitachi"></a></li>
+          <li><a href="#"><img src="img/lg.png" width="121" height="73" alt="LG"></a></li>
+          <li><a href="#"><img src="img/aeg.png" width="151" height="96" alt="AEG Power Solutions"></a></li>
+          <li><a href="#"><img src="img/metabo.png" width="204" height="69" alt="Metabowerke"></a></li>
         </ul>
       </section>
 
