--- a/catalog.html
+++ b/catalog.html
@@ -157,45 +157,47 @@
 </main>
 
 <footer>
-    <a href="index.html"><img style="background-color: red;" class="menu-logo-bottom" src="img/logo.svg" alt="Логотип магазина Technomart" width="220" height="68"></a>
-    <ul class="main-menu">
-        <li><a href="index.html">Главная</a></li>
-        <li><a href="#">Компания</a></li>
-        <li><a href="#">Каталог</a></li>
-        <li><a href="#">Новости</a></li>
-        <li><a href="#">Спецпредложения</a></li>
-        <li><a href="#">Доставка</a></li>
-        <li><a href="#">Контакты</a></li>
-    </ul>
-    <ul class="category-menu">
-        <li><a href="#">Материалы</a></li>
-        <li><a href="#">Техника</a></li>
-        <li><a href="#">Инструмент</a></li>
-        <li><a href="#">Спецпредложения</a></li>
-    </ul>
-    <div class="address-bottom">
-        <p class="address-bottom">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br><a class="phone" href="tel:+78125550555">+7 (812) 555-05-55</a></p>
-    </div>
-    <div class="copyright-section">
-        <p>© 2010–2019 Компания «Техномарт» <br>Все права защищены</p>
-    </div>
-    <div class="social-networks">
-        <ul class="soc-network-list">
-            <li class="vk">Вконтакте</li>
-            <li class="facebook">Facebook</li>
-            <li class="instagram">Instagram</li>
+    <div class="top-footer">
+        <a href="index.html"><img style="background-color: red;" class="menu-logo-bottom" src="img/logo.svg"
+                                  alt="Логотип магазина Technomart" width="220" height="68"></a>
+        <ul class="main-menu">
+            <li><a href="index.html">Главная</a></li>
+            <li><a href="#">Компания</a></li>
+            <li><a href="catalog.html">Каталог</a></li>
+            <li><a href="#">Новости</a></li>
+            <li><a href="#">Спецпредложения</a></li>
+            <li><a href="#">Доставка</a></li>
+            <li><a href="#">Контакты</a></li>
         </ul>
+        <ul class="category-menu">
+            <li><a href="#">Материалы</a></li>
+            <li><a href="#">Техника</a></li>
+            <li><a href="#">Инструмент</a></li>
+            <li><a href="#">Спецпредложения</a></li>
+        </ul>
+        <div class="address-bottom">
+            <p class="address-bottom">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br><a class="phone"
+                                                                                            href="tel:+78125550555">+7
+                (812) 555-05-55</a></p>
+        </div>
     </div>
-    <div class="feedback">
-        <p>
-            <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
-        </p>
-    </div>
-    <div class="developer">
-        <p>
-            Разработано —
-            <a target="_blank" href="https://htmlacademy.ru/">htmlacademy.ru</a>
-        </p>
+    <div class="bottom-footer">
+        <div class="copyright-section">
+            <p>© 2010–2019 Компания «Техномарт» <br>Все права защищены</p>
+        </div>
+        <div class="social-networks">
+            <ul class="soc-network-list">
+                <li class="vk">Вконтакте</li>
+                <li class="facebook">Facebook</li>
+                <li class="instagram">Instagram</li>
+            </ul>
+        </div>
+        <div class="feedback">
+            <p>Обратная связь: <br><a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a></p>
+        </div>
+        <div class="developer">
+            <p>Разработано — <br><a target="_blank" href="https://htmlacademy.ru/">htmlacademy.ru</a></p>
+        </div>
     </div>
 </footer>
 </body>
