--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
     <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
-<header>
+<header class="main-header">
     <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
     <div class="top-section">
         <a href="index.html"><img style="background-color: red;" class="menu-logo-bottom" src="img/logo.svg" alt="Логотип магазина Technomart" width="220" height="47"></a>
@@ -156,7 +156,7 @@
     </section>
 </main>
 
-<footer>
+<footer class="main-footer">
     <div class="top-footer">
         <a href="index.html"><img style="background-color: red;" class="menu-logo-bottom" src="img/logo.svg"
                                   alt="Логотип магазина Technomart" width="220" height="68"></a>
