--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <header>
+    <header class="main-header">
       <h1 class="index-page-h1">Интернет-магазин строительных материалов и инструментов для ремонта</h1>
       <div class="top-section">
         <a href="index.html"><img style="background-color: red;" class="menu-logo-bottom" src="img/logo.svg" alt="Логотип магазина Technomart" width="220" height="47"></a>
@@ -40,7 +40,7 @@
       </nav>
     </header>
 
-    <main>
+    <main class="main-container">
 
       <section class="offers">
         <h2 class="visually-hidden">Предложения</h2>
@@ -140,7 +140,7 @@
       </section>
     </main>
 
-    <footer>
+    <footer class="main-footer">
         <div class="top-footer">
             <a href="index.html"><img style="background-color: red;" class="menu-logo-bottom" src="img/logo.svg"
                                       alt="Логотип магазина Technomart" width="220" height="68"></a>
