--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
   </head>
   <body>
     <header class="main-header">
-      <h1 class="index-page-h1">Интернет-магазин строительных материалов и инструментов для ремонта</h1>
       <div class="top-section">
-        <a href="index.html"><img style="background-color: red;" class="menu-logo-bottom" src="img/logo.svg" alt="Логотип магазина Technomart" width="220" height="47"></a>
+        <div class="logo"><a href="index.html"><img class="menu-logo-bottom" src="img/logo.svg" alt="Логотип магазина Technomart"></a></div>
         <form action="catalog.html" method="get">
           <label for="search-field">Поиск</label>
           <input type="search" name="search" id="search-field">
@@ -18,6 +17,7 @@
         <a href="#" class="cart">Корзина: 0</a>
         <a href="#" class="create-order">Оформить заказ</a>
       </div>
+        <h1 class="index-page-h1">Интернет-магазин строительных материалов и инструментов для ремонта</h1>
       <div class="address-top">
         <a class="phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
         <p class="address-top">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
